--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,39 +1,39 @@
-{% set version = "4.5.6" %}
-
-{% set variant = "openblas" %}
+{% set version = "5.2.0" %}
 
 package:
   name: suitesparse
   version: {{ version }}
 
 source:
-  fn: SuiteSparse-{{ version }}.tar.gz
-  url: http://faculty.cse.tamu.edu/davis/SuiteSparse/SuiteSparse-{{ version }}.tar.gz
-  sha256: de5fb496bdc029e55955e05d918a1862a177805fbbd5b957e8b5ce6632f6c77e
+  - url: https://github.com/continuumIO/suitesparse-metis-for-windows/archive/master.zip   # [win]
+    fn: suitesparse_cmake_setup.zip                                                      # [win]
+  - url: http://faculty.cse.tamu.edu/davis/SuiteSparse/SuiteSparse-{{ version }}.tar.gz
+    sha256: 3c46c035ea8217649958a0f73360e825b0c9dcca4e32a9349d2c7678c0d48813
+    patches:
+      - 0001-only-build-UMFPACK-library.patch
+    # nest folder on Windows so that it clobbers the older stuff from the cmake build that vendors it
+    folder: SuiteSparse-to-move                              # [win]
 
 build:
-  skip: true  # [win]
-  number: 1201
-  features:
-    - blas_{{ variant }}
+  number: 0
+  skip: True  # [blas_impl == 'openblas' and win]
+  run_exports:
+    - {{ pin_subpackage("suitesparse") }}
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - {{ compiler("c") }}
+    - {{ compiler("cxx") }}
     - cmake
   host:
-    - blas 1.1 {{ variant }}
-    - openblas
+    - metis
+    - mkl-devel  {{ mkl }}           # [blas_impl == 'mkl']
+    - openblas-devel {{ openblas }}  # [blas_impl == 'openblas']
     - tbb-devel
-    - metis
-  run:
-    - blas 1.1 {{ variant }}
-    - openblas
-    - metis
 
 test:
   commands:
+    {% if unix %}
     - test -f ${PREFIX}/lib/libamd${SHLIB_EXT}
     - test -f ${PREFIX}/lib/libbtf${SHLIB_EXT}
     - test -f ${PREFIX}/lib/libcamd${SHLIB_EXT}
@@ -60,9 +60,19 @@ test:
     - test -f ${PREFIX}/lib/libspqr.a
     - test -f ${PREFIX}/lib/libsuitesparseconfig.a
     - test -f ${PREFIX}/lib/libumfpack.a
-
-    - conda inspect linkages -p ${PREFIX} suitesparse  # [not win]
-    - conda inspect objects -p ${PREFIX} suitesparse  # [osx]
+    {% else %}
+    - IF NOT EXIST %LIBRARY_LIB%\amd.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\btf.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\camd.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\ccolamd.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\cholmod.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\colamd.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\cxsparse.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\klu.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\ldl.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\spqr.lib exit 1
+    - IF NOT EXIST %LIBRARY_LIB%\umfpack.lib exit 1
+    {% endif %}
 
 about:
   home: http://faculty.cse.tamu.edu/davis/suitesparse.html
