--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,6 +26,8 @@ requirements:
     - {{ compiler("cxx") }}
     - cmake
     - make  # [unix]
+    - patch     # [not win]
+    - m2-patch  # [win]
   host:
     - metis
     - mkl-devel  {{ mkl }}           # [blas_impl == 'mkl']
