remove make tool from windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
     - {{ compiler("cxx") }}
     - cmake
     - make  # [unix]
+    - ninja  # [win]
     - patch     # [not win]
     - m2-patch  # [win]
   host:
