--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,6 +13,8 @@ build:
   skip: True  # [s390x]
   run_exports:
     - {{ pin_subpackage("suitesparse") }}
+  missing_dso_whitelist:
+    - '*/libomp.dylib'    # [osx]
 
 requirements:
   build:
@@ -37,6 +39,7 @@ requirements:
   run:
     - mpfr >=4.0.2,<5.0a0
     - gmp >=6.2.1,<7.0a0              # [not win]
+    - _openmp_mutex                   # [linux]
 
 test:
   commands:
